--- a/examples/scrum-board/package.json
+++ b/examples/scrum-board/package.json
@@ -8,7 +8,7 @@
     "clean": "rimraf dist && rimraf -g 'lib/**/*.d.ts'",
     "jay": "jay-cli runtime ./lib",
     "build:js": "vite build --base ./",
-    "build:watch": "vite",
+    "build:watch": "vite --force",
     "build": "npm run definitions && npm run build:js",
     "confirm": "npm run clean && npm run build && npm run test",
     "test": ":"
