--- a/examples/todo-components/package.json
+++ b/examples/todo-components/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "definitions": "jay-cli definitions ./lib",
     "build:js": "vite build --base ./",
-    "build:watch": "vite",
+    "build:watch": "vite --force",
     "build": "npm run definitions && npm run build:js",
     "confirm": "npm run clean && npm run build && npm run test",
     "clean": "rimraf dist && rimraf dist-secure && (rimraf -g lib/**/*.jay-html.ts || :) && (rimraf -g lib/**/*.d.ts || :) && (rimraf -g lib-secure/**/*.d.ts || :)",
