--- a/examples/mini-benchmark/package.json
+++ b/examples/mini-benchmark/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "definitions": "jay-cli definitions ./lib",
     "build:js": "vite build --base ./",
-    "build:watch": "vite",
+    "build:watch": "nodemon --watch '../../packages/rollup-plugin/dist/index.js' -x \"DEBUG=vite:hmr,jay:*  vite --open\"",
     "build": "npm run definitions && npm run copy:refs && npm run build:js",
     "confirm": "npm run clean && npm run build && npm run test",
     "copy:refs": "run-s 'copy:refs:*'",
@@ -48,7 +48,6 @@
     "tslib": "^2.6.2",
     "typescript": "^5.3.2",
     "vite": "^5.0.5",
-    "vite-plugin-inspect": "^0.8.1",
-    "vite-plugin-restart": "^0.4.0"
+    "vite-plugin-inspect": "^0.8.1"
   }
 }
