--- a/examples/tree/package.json
+++ b/examples/tree/package.json
@@ -7,7 +7,7 @@
     "definitions": "jay-cli definitions ./lib",
     "runtime": "jay-cli runtime ./lib",
     "build:js": "vite build --base ./",
-    "build:watch": "vite --force",
+    "build:watch": "nodemon --watch '../../packages/rollup-plugin/dist/index.js' -x \"DEBUG=vite:hmr,jay:*  vite --open\"",
     "build": "npm run definitions && npm run build:js",
     "confirm": "npm run clean && npm run build && npm run test",
     "clean": "rimraf dist && (rimraf -g lib/**/*.d.ts || :)",
@@ -25,6 +25,7 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "jay-cli": "workspace:^",
     "jay-dev-environment": "workspace:^",
+    "nodemon": "^3.0.2",
     "rimraf": "^5.0.5",
     "rollup": "^4.6.1",
     "rollup-plugin-copy": "^3.5.0",
@@ -34,7 +35,6 @@
     "tslib": "^2.6.2",
     "typescript": "^5.3.2",
     "vite": "^5.0.5",
-    "vite-plugin-inspect": "^0.8.1",
-    "vite-plugin-restart": "^0.4.0"
+    "vite-plugin-inspect": "^0.8.1"
   }
 }
