--- a/packages/rollup-plugin/package.json
+++ b/packages/rollup-plugin/package.json
@@ -35,6 +35,7 @@
     "rollup": "^4.6.1",
     "tsup": "^8.0.1",
     "vite": "^5.0.5",
-    "vitest": "^0.34.6"
+    "vitest": "^0.34.6",
+    "vitest-mock-extended": "^1.3.1"
   }
 }
