--- a/packages/rollup-plugin/package.json
+++ b/packages/rollup-plugin/package.json
@@ -36,6 +36,7 @@
     "rollup-plugin-typescript2": "^0.36.0",
     "tsup": "^8.0.1",
     "vite": "^5.0.5",
-    "vitest": "^0.34.6"
+    "vitest": "^0.34.6",
+    "vitest-mock-extended": "^1.3.1"
   }
 }
