--- a/examples/mini-benchmark/package.json
+++ b/examples/mini-benchmark/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "definitions": "jay-cli definitions ./lib",
     "build:js": "vite build --base ./",
-    "build:watch": "nodemon --watch '../../packages/rollup-plugin/dist/index.js' -x \"DEBUG=vite:hmr,jay:*  vite --open\"",
+    "build:watch": "nodemon --watch '../../packages/rollup-plugin/dist/index.js' -x \"DEBUG=vite:hmr,jay:* vite --open\"",
     "build": "npm run definitions && npm run copy:refs && npm run build:js",
     "confirm": "npm run clean && npm run build && npm run test",
     "copy:refs": "run-s 'copy:refs:*'",
@@ -18,7 +18,7 @@
     "copy:composite": "cp ./lib/composite/composite-data.ts ./lib-secure/sandbox/composite/",
     "copy:condition": "cp ./lib/conditions/conditions-data.ts ./lib-secure/sandbox/conditions/",
     "copy:table": "cp ./lib/table/table-host.ts ./lib-secure/sandbox/table/ && cp ./lib/table/table.ts ./lib-secure/sandbox/table/",
-    "clean": "rimraf dist && rimraf dist-secure && (rimraf -g lib/**/*.jay-html.ts || :) && (rimraf -g lib/**/*.d.ts || :) && (rimraf -g lib-secure/**/*.d.ts || :)",
+    "clean": "rimraf dist && rimraf build && rimraf dist-secure && (rimraf -g lib/**/*.jay-html.ts || :) && (rimraf -g lib/**/*.d.ts || :) && (rimraf -g lib-secure/**/*.d.ts || :)",
     "test": ":"
   },
   "dependencies": {
