--- a/examples/todo-components-rollup/package.json
+++ b/examples/todo-components-rollup/package.json
@@ -9,7 +9,7 @@
     "build": "npm run definitions && npm run build:js",
     "build:watch": "npm run build:js -- --watch",
     "confirm": "npm run clean && npm run build && npm run test",
-    "clean": "rimraf dist && rimraf dist-secure && (rimraf -g lib/**/*.jay-html.ts || :) && (rimraf -g lib/**/*.d.ts || :) && (rimraf -g lib-secure/**/*.d.ts || :)",
+    "clean": "rimraf dist && rimraf build && rimraf dist-secure && (rimraf -g lib/**/*.jay-html.ts || :) && (rimraf -g lib/**/*.d.ts || :) && (rimraf -g lib-secure/**/*.d.ts || :)",
     "mk-secure": "npm run jay && mv ./lib/item.jay-html.ts ./lib-secure/main && mv ./lib/todo.jay-html.ts ./lib-secure/main && cp ./lib/item.ts ./lib-secure/sandbox && cp ./lib/todo.ts ./lib-secure/sandbox && cp ./lib/uuid.ts ./lib-secure/sandbox",
     "test": ":"
   },
