--- a/examples/counter-raw/package.json
+++ b/examples/counter-raw/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "definitions": "jay-cli definitions ./lib",
     "build:js": "vite build --base ./",
-    "build:watch": "nodemon --watch '../../packages/rollup-plugin/dist/index.js' -x \"DEBUG=vite:hmr,jay:*  vite --open\"",
+    "build:watch": "nodemon --watch '../../packages/rollup-plugin/dist/index.js' -x \"DEBUG=vite:hmr,jay:* vite --open\"",
     "build": "npm run definitions && npm run build:js",
-    "clean": "rimraf dist && (rimraf -g lib/**/*.d.ts || :)",
+    "clean": "rimraf dist && rimraf build && (rimraf -g lib/**/*.d.ts || :)",
     "confirm": "npm run clean && npm run build && npm run test",
     "test": ":"
   },
