--- a/packages/rollup-plugin/package.json
+++ b/packages/rollup-plugin/package.json
@@ -15,10 +15,10 @@
     "build:types": "tsup lib/index.ts --dts-only --format cjs",
     "build:check-types": "tsc",
     "build:executable-bin": "chmod +x dist/index.js",
-    "clean": "rimraf dist",
+    "clean": "rimraf dist && rimraf test/jayRuntime/fixtures/sandbox-counter/dist",
     "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
-    "test": ":",
-    "test:watch": ":"
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "fast-glob": "^3.3.2",
