[compiler] compiler transforms code to jayFile to code
Transform code to JayFile, use it in code generation.
Use originId to tell the origin file.
Simplify load file logic.
Resolve correct originId for Vite sandbox watch mode.

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -4,7 +4,7 @@
     "outDir": "dist",
     "paths": {
       "jay-compiler": ["../compiler/lib"],
-      "rollup-plugin-jay": ["../rollup-plugin-jay/lib"]
+      "rollup-plugin-jay": ["../rollup-plugin/lib"]
     }
   }
 }
