--- a/examples/todo-components-rollup/tsconfig.json
+++ b/examples/todo-components-rollup/tsconfig.json
@@ -11,5 +11,6 @@
       "jay-serialization": ["../../packages/serialization/lib"],
       "rollup-plugin-jay": ["../../packages/rollup-plugin-jay/lib"]
     }
-  }
+  },
+  "exclude": ["node_modules", "dist", "dist-secure", "build"]
 }
