[build] check types on yarn confirm

--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "jay",
   "scripts": {
     "build": "wsrun -te --report build",
-    "build:watch": "wsrun -p 'jay-@(cli|compiler|component|json-patch|list-compare|reactive|runtime|secure|serialization)' -p '@(rollup|vite)-plugin-jay' -m --prefix build:watch",
+    "build:check-types": "wsrun -p 'jay-@(cli|compiler|component|json-patch|list-compare|reactive|runtime|secure|serialization)' -p '@(rollup|vite)-plugin-jay' -e --prefix build:check-types",
+    "build:watch": "wsrun -p 'jay-@(cli|compiler|component|json-patch|list-compare|reactive|runtime|secure|serialization)' -p '@(rollup|vite)-plugin-jay' --prefix build:watch",
     "clean": "wsrun clean",
     "clean:node_modules": "rimraf node_modules && rimraf packages/*/node_modules && rimraf examples/*/node_modules && rimraf exploration/*/node_modules",
     "clean:node_modules:with-cache": "npm run clean:node_modules && yarn cache clean",
-    "confirm": "npm run rebuild && npm run test && npm run format",
+    "confirm": "npm run rebuild && npm run build:check-types && npm run test && npm run format",
     "deps:upgrade": "yarn upgrade-interactive && yarn && yarn deduplicate",
     "deduplicate": "yarn dedupe --strategy highest",
     "format": "npm run format:extensions && npm run format:prettier",
