--- a/examples/todo/tsconfig.json
+++ b/examples/todo/tsconfig.json
@@ -8,7 +8,7 @@
       "jay-reactive": ["../../packages/reactive/lib"],
       "jay-runtime": ["../../packages/runtime/lib"],
       "jay-serialization": ["../../packages/serialization/lib"],
-      "rollup-plugin-jay": ["../../packages/rollup-plugin-jay/lib"]
-    }
-  }
+      "rollup-plugin-jay": ["../../packages/rollup-plugin-jay/lib"],
+    },
+  },
 }
