--- a/packages/json-patch/tsconfig.json
+++ b/packages/json-patch/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "dist",
     "paths": {
-      "jay-list-compare": ["../list-compare/lib"]
-    }
-  }
+      "jay-list-compare": ["../list-compare/lib"],
+    },
+  },
 }
