--- a/packages/secure/tsconfig.json
+++ b/packages/secure/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "jay-dev-environment/library-dom/tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist"
-  }
+    "outDir": "dist",
+  },
 }
