--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -37,10 +37,12 @@
   "devDependencies": {
     "@caiogondim/strip-margin": "^1.0.0",
     "@testing-library/jest-dom": "^6.2.0",
+    "@types/js-beautify": "^1",
     "@types/node": "^20.11.5",
     "jay-dev-environment": "workspace:^",
     "jest-diff": "^29.7.0",
     "jest-matcher-utils": "^29.7.0",
+    "js-beautify": "^1.14.11",
     "rimraf": "^5.0.5",
     "tsup": "^8.0.1",
     "vite": "^5.0.11",
