created test-utils bundle from jay-secure to be used for testing in other packages, like jay-secure-react

--- a/packages/secure/package.json
+++ b/packages/secure/package.json
@@ -4,11 +4,13 @@
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
-    "build": "npm run build:js && npm run build:types",
+    "build": "npm run build:js && npm run build:types && npm run build:test-utils",
     "build:watch": "npm run build:cli-link && npm run build:js -- --watch",
     "build:js": "vite build",
-    "build:types": "tsup lib/index.ts --dts-only --format esm",
+    "build:test-utils": "vite build -c vite-test-utils.config.ts",
+    "build:types": "tsup lib/index.ts lib/test-utils.ts --dts-only --format esm",
     "build:check-types": "tsc",
+    "build:types-test-utils": "tsup lib/test-utils/index.ts --dts-only --format esm",
     "clean": "rimraf dist",
     "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test && npm run definitions && npm run runtime",
     "test": "vitest run",
