--- a/examples/react/mini-benchmark-react/package.json
+++ b/examples/react/mini-benchmark-react/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "echo 'react-scripts test disabled'",
     "eject": "react-scripts eject",
     "serve": "npx serve build",
     "clean": "rimraf build"
