--- a/packages/rollup-plugin/package.json
+++ b/packages/rollup-plugin/package.json
@@ -15,7 +15,7 @@
     "build:types": "tsup lib/index.ts --dts-only --format cjs",
     "build:check-types": "tsc",
     "build:executable-bin": "chmod +x dist/index.js",
-    "clean": "rimraf dist && rimraf test/jayRuntime/fixtures/counter/dist",
+    "clean": "rimraf dist && rimraf test/jayRuntime/fixtures/counter/dist && rimraf test/jayRuntime/fixtures/exec/dist",
     "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
     "test": "vitest run",
     "test:watch": "vitest"
