--- a/packages/rollup-plugin/tsconfig.json
+++ b/packages/rollup-plugin/tsconfig.json
@@ -6,5 +6,5 @@
       "jay-compiler": ["../compiler/lib"],
     },
   },
-  "exclude": ["**/source/build/**", "**/source/dist/**", "**/sandbox-counter/dist/**"],
+  "exclude": ["**/source/build/**", "**/source/dist/**", "**/fixtures/**"],
 }
