updated the mini-benchmark example to work out of the box using secure build. Still pending issues.

--- a/examples/jay/mini-benchmark/package.json
+++ b/examples/jay/mini-benchmark/package.json
@@ -4,20 +4,11 @@
   "type": "module",
   "description": "",
   "scripts": {
-    "definitions": "jay-cli definitions ./lib",
+    "definitions": "jay-cli definitions ./lib && jay-cli definitions ./lib-secure",
     "build:js": "vite build --base ./",
     "build:watch": "nodemon --watch '../../packages/rollup-plugin/dist/index.js' -x \"DEBUG=vite:hmr,jay:* vite --open\"",
-    "build": "npm run definitions && npm run copy:refs && npm run build:js",
+    "build": "npm run definitions && npm run build:js",
     "confirm": "npm run clean && npm run build && npm run test",
-    "copy:refs": "run-s 'copy:refs:*'",
-    "copy:refs:main": "rsync -r --include='*/' --include='*-refs.d.ts' --exclude='*' lib/* lib-secure/main",
-    "copy:refs:sandbox": "rsync -r --include='*/' --include='*-refs.d.ts' --exclude='*' lib/* lib-secure/sandbox",
-    "copy:main": "cp ./lib/main.ts ./lib-secure/sandbox/ && cp ./lib/benchmark.ts ./lib-secure/sandbox/",
-    "copy:basic": "cp ./lib/basic/basic-data.ts ./lib-secure/sandbox/basic/",
-    "copy:collection": "cp ./lib/collections/collections-data.ts ./lib-secure/sandbox/collections/",
-    "copy:composite": "cp ./lib/composite/composite-data.ts ./lib-secure/sandbox/composite/",
-    "copy:condition": "cp ./lib/conditions/conditions-data.ts ./lib-secure/sandbox/conditions/",
-    "copy:table": "cp ./lib/table/table-host.ts ./lib-secure/sandbox/table/ && cp ./lib/table/table.ts ./lib-secure/sandbox/table/",
     "clean": "rimraf dist && rimraf build && rimraf dist-secure && (rimraf -g lib/**/*.jay-html.ts || :) && (rimraf -g lib/**/*.d.ts || :) && (rimraf -g lib-secure/**/*.d.ts || :)",
     "test": ":"
   },
