created reactive tracing as an optional import

--- a/packages/runtime/reactive/package.json
+++ b/packages/runtime/reactive/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.4",
   "type": "module",
   "main": "dist/index.js",
+  "exports": {
+    ".": "./dist/index.js",
+    "./tracing": "./dist/tracing.js"
+  },
   "scripts": {
     "build": "npm run build:js && npm run build:types",
     "build:watch": "npm run build:js -- --watch & npm run build:types -- --watch",
