--- a/packages/compiler/compiler-shared/package.json
+++ b/packages/compiler/compiler-shared/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jay-compiler",
+  "name": "jay-compiler-shared",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
@@ -7,9 +7,8 @@
     "lib": "lib"
   },
   "scripts": {
-    "build": "npm run build:pegjs && npm run build:js && npm run build:types",
+    "build": "npm run build:js && npm run build:types",
     "build:watch": "npm run build:js -- --watch & npm run build:types -- --watch",
-    "build:pegjs": "pegjs --allowed-start-rules dynamicAttribute,booleanAttribute,dynamicText,dynamicProperty,conditionFunc,accessor,Identifier,classExpression,dynamicComponentProp,importNames,enum,is_enum  -o lib/expressions/expression-parser.cjs lib/expressions/expression-parser.pegjs",
     "build:js": "vite build",
     "build:types": "tsup lib/index.ts --dts-only --format cjs",
     "build:check-types": "tsc",
@@ -23,7 +22,6 @@
   "dependencies": {
     "@types/js-yaml": "^4.0.9",
     "change-case": "^4.1.2",
-    "jay-compiler-shared": "workspace:^",
     "jay-component": "workspace:^",
     "jay-runtime": "workspace:^",
     "jay-secure": "workspace:^",
