split compiler, extracting compiler-analyze-exported-types package

--- a/packages/compiler/compiler/package.json
+++ b/packages/compiler/compiler/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@types/js-yaml": "^4.0.9",
     "change-case": "^4.1.2",
+    "jay-compiler-analyze-exported-types": "workspace:^",
     "jay-compiler-shared": "workspace:^",
     "jay-component": "workspace:^",
     "jay-runtime": "workspace:^",
