--- a/packages/compiler/compiler-jay-html/package.json
+++ b/packages/compiler/compiler-jay-html/package.json
@@ -40,11 +40,13 @@
     "@testing-library/jest-dom": "^6.2.0",
     "@types/js-beautify": "^1",
     "@types/node": "^20.11.5",
-    "jay-dev-environment": "workspace:^",
     "jay-4-react": "workspace:^",
+    "jay-dev-environment": "workspace:^",
     "jest-diff": "^29.7.0",
     "jest-matcher-utils": "^29.7.0",
     "js-beautify": "^1.14.11",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rimraf": "^5.0.5",
     "tsup": "^8.0.1",
     "vite": "^5.0.11",
