--- a/packages/compiler/compiler-jay-html/tsconfig.json
+++ b/packages/compiler/compiler-jay-html/tsconfig.json
@@ -6,6 +6,7 @@
       "jay-component": ["../component/lib"],
       "jay-runtime": ["../runtime/lib"],
       "jay-secure": ["../secure/lib"],
+      "react": ["./node_modules/@types/react"],
     },
   },
 }
