--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
       "dev-environment",
       "packages/runtime/*",
       "packages/compiler/*",
+      "packages/jay-stack/*",
       "packages/_deprecated/*",
       "examples/**",
       "exploration/*"
