setup fake shop to use jay-stack

--- a/examples/jay-stack/fake-shop/tsconfig.json
+++ b/examples/jay-stack/fake-shop/tsconfig.json
@@ -18,7 +18,11 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "paths": {
+      "jay-stack-runtime": ["../../packages/jay-stack-runtime/lib"]
+    }
   },
   "include": ["src"]
 }
