--- a/examples/jay-stack/fake-shop/package.json
+++ b/examples/jay-stack/fake-shop/package.json
@@ -14,6 +14,7 @@
     "compression": "^1.7.5",
     "express": "^5.0.1",
     "jay-stack-route-scanner": "workspace:^",
+    "jay-stack-runtime": "workspace:^",
     "sirv": "^3.0.0"
   },
   "devDependencies": {
