--- a/examples/jay-stack/fake-shop/package.json
+++ b/examples/jay-stack/fake-shop/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "node server",
+    "definitions": "jay-cli definitions src",
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build --outDir dist/client",
     "build:server": "vite build --ssr src/entry-server.ts --outDir dist/server",
@@ -21,6 +22,8 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.0",
     "cross-env": "^7.0.3",
+    "jay-cli": "workspace:^",
+    "jay-dev-environment": "workspace:^",
     "typescript": "~5.7.2",
     "vite": "^6.0.1"
   }
