--- a/packages/jay-stack/stack-runtime/package.json
+++ b/packages/jay-stack/stack-runtime/package.json
@@ -2,7 +2,7 @@
   "name": "jay-stack-runtime",
   "version": "1.0.0",
   "type": "module",
-  "main": "dist/index",
+  "main": "dist/index.js",
   "scripts": {
     "build": "npm run build:js && npm run build:types",
     "build:watch": "npm run build:js -- --watch & npm run build:types -- --watch",
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "jay-component": "workspace:^",
-    "jay-runtime": "workspace:^"
+    "jay-runtime": "workspace:^",
+    "jay-stack-route-scanner": "workspace:^"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
