--- a/examples/jay-stack/fake-shop/package.json
+++ b/examples/jay-stack/fake-shop/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "vite-typescript-starter",
+  "name": "fake-shop",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "node server",
+    "clean": "rimraf dist && rimraf build && rimraf -g 'src/**/*.d.ts'",
     "definitions": "jay-cli definitions src",
-    "build": "npm run build:client && npm run build:server",
+    "build": "echo 'not implemented yet'",
+    "build:disabled": "npm run build:client && # npm run build:server",
     "build:client": "vite build --outDir dist/client",
     "build:server": "vite build --ssr src/entry-server.ts --outDir dist/server",
+    "test": ":",
     "preview": "cross-env NODE_ENV=production node server"
   },
   "dependencies": {
