added to jay cli definition command to also generate .d.ts files for jay-contract files

--- a/packages/compiler/rollup-plugin/package.json
+++ b/packages/compiler/rollup-plugin/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "fast-glob": "^3.3.2",
     "jay-compiler": "workspace:^",
+    "jay-compiler-contract": "workspace:^",
     "jay-compiler-jay-html": "workspace:^",
     "typescript": "^5.3.3"
   },
