--- a/packages/compiler/compiler-contract/package.json
+++ b/packages/compiler/compiler-contract/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/js-yaml": "^4.0.9",
     "change-case": "^4.1.2",
+    "jay-compiler-jay-html": "workspace:^",
     "jay-compiler-shared": "workspace:^",
     "jay-component": "workspace:^",
     "jay-runtime": "workspace:^",
