implemented the mood-tracker example plugin

--- a/examples/jay-stack/mood-tracker-plugin/package.json
+++ b/examples/jay-stack/mood-tracker-plugin/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npm run definitions && npm run build:js",
     "definitions": "jay-cli definitions src",
-    "build:js": "vite build --base ./",
+    "build:js": "# vite build --base ./",
     "build:watch": "nodemon --watch '../../packages/rollup-plugin/dist/index.js' -x \"DEBUG=vite:hmr,jay:* vite --open\"",
     "clean": "rimraf dist && rimraf build && (rimraf -g src/**/*.d.ts || :)",
     "confirm": "npm run clean && npm run build && npm run test",
@@ -16,7 +16,8 @@
     "jay-component": "workspace:^",
     "jay-reactive": "workspace:^",
     "jay-runtime": "workspace:^",
-    "jay-secure": "workspace:^"
+    "jay-secure": "workspace:^",
+    "jay-stack-runtime": "workspace:^"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
