--- a/packages/jay-stack/stack-runtime/package.json
+++ b/packages/jay-stack/stack-runtime/package.json
@@ -9,6 +9,7 @@
     "build:js": "vite build",
     "build:types": "tsup lib/index.ts --dts-only --format esm",
     "build:check-types": "tsc",
+    "definitions": "jay-cli definitions test",
     "clean": "rimraf dist",
     "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
     "test": "echo 'no test yet svitest run'",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
+    "jay-cli": "workspace:^",
     "jay-dev-environment": "workspace:^",
     "nodemon": "^3.0.3",
     "replace-in-file": "^7.1.0",
