--- a/packages/jay-stack/stack-runtime/package.json
+++ b/packages/jay-stack/stack-runtime/package.json
@@ -9,7 +9,8 @@
     "build:js": "vite build",
     "build:types": "tsup lib/index.ts --dts-only --format esm",
     "build:check-types": "tsc",
-    "definitions": "jay-cli definitions test",
+    "test-definitions": "jay-cli definitions test",
+    "test-runtime": "jay-cli runtime test",
     "clean": "rimraf dist",
     "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
     "test": "echo 'no test yet svitest run'",
