added tests that validate a page with params work

--- a/packages/jay-stack/stack-runtime/package.json
+++ b/packages/jay-stack/stack-runtime/package.json
@@ -13,7 +13,7 @@
     "test-runtime": "jay-cli runtime test",
     "clean": "rimraf dist",
     "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
-    "test": "echo 'no test yet svitest run'",
+    "test": "vitest run",
     "test:watch": "vitest"
   },
   "dependencies": {
