--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jay",
   "scripts": {
     "build": "wsrun -te --report build",
-    "build:check-types": "wsrun -p 'jay-@(cli|compiler|compiler-shared|compiler-analyze-exported-types|compiler-jay-html|component|json-patch|list-compare|reactive|runtime|secure|serialization)' -p '@(rollup|vite)-plugin-jay' -e --prefix build:check-types",
+    "build:check-types": "wsrun -p 'jay-@(cli|compiler|compiler-shared|compiler-analyze-exported-types|compiler-jay-html|component|json-patch|list-compare|reactive|runtime|secure|serialization|fake-shop)' -p '@(rollup|vite)-plugin-jay' -e --prefix build:check-types",
     "build:watch": "wsrun -p 'jay-@(cli|compiler|compiler-shared|compiler-analyze-exported-types|compiler-jay-html|component|json-patch|list-compare|reactive|runtime|secure|serialization)' -p '@(rollup|vite)-plugin-jay' --prefix build:watch",
     "clean": "wsrun clean",
     "clean:node_modules": "rimraf node_modules && rimraf packages/*/node_modules && rimraf examples/*/node_modules && rimraf exploration/*/node_modules",
