split dev server and stack-runtime due to different test environment

--- a/packages/jay-stack/route-scanner/package.json
+++ b/packages/jay-stack/route-scanner/package.json
@@ -1,8 +1,8 @@
 {
   "name": "jay-stack-route-scanner",
   "version": "1.0.0",
-  "type": "module",
-  "main": "dist/index.cjs",
+  "main": "dist/index.js",
+  "types": "dist/index.d.mts",
   "scripts": {
     "build": "npm run build:js && npm run build:types",
     "build:watch": "npm run build:js -- --watch & npm run build:types -- --watch",
