--- a/examples/jay-stack/fake-shop/package.json
+++ b/examples/jay-stack/fake-shop/package.json
@@ -11,12 +11,14 @@
     "build:disabled": "npm run build:client && # npm run build:server",
     "build:client": "vite build --outDir dist/client",
     "build:server": "vite build --ssr src/entry-server.ts --outDir dist/server",
+    "build:check-types": "tsc",
     "test": ":",
     "preview": "cross-env NODE_ENV=production node server"
   },
   "dependencies": {
     "compression": "^1.7.5",
     "express": "^5.0.1",
+    "jay-full-stack-component": "workspace:^",
     "jay-stack-client-runtime": "workspace:^",
     "jay-stack-route-scanner": "workspace:^",
     "jay-stack-server-runtime": "workspace:^",
