--- a/packages/jay-stack/stack-client-runtime/package.json
+++ b/packages/jay-stack/stack-client-runtime/package.json
@@ -18,7 +18,7 @@
     "build:check-types": "tsc",
     "clean": "rimraf dist",
     "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
-    "test": "# vitest run",
+    "test": "echo 'no tests'",
     "test:watch": "vitest"
   },
   "dependencies": {
