--- a/examples/jay-stack/fake-shop/package.json
+++ b/examples/jay-stack/fake-shop/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "compression": "^1.7.5",
     "express": "^5.0.1",
-    "jay-full-stack-component": "workspace:^",
+    "jay-fullstack-component": "workspace:^",
+    "jay-mood-tracker-plugin": "workspace:^",
     "jay-stack-client-runtime": "workspace:^",
     "jay-stack-route-scanner": "workspace:^",
     "jay-stack-server-runtime": "workspace:^",
