--- a/examples/jay-stack/mood-tracker-plugin/package.json
+++ b/examples/jay-stack/mood-tracker-plugin/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "type": "module",
   "main": "dist/index.js",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "exports": {
     ".": "./dist/index.js",
     "./mood-tracker.jay-contract": "./dist/mood-tracker.jay-contract"
