--- a/packages/jay-stack/stack-client-runtime/tsconfig.json
+++ b/packages/jay-stack/stack-client-runtime/tsconfig.json
@@ -5,6 +5,7 @@
     "paths": {
       "jay-list-compare": ["../list-compare/lib"],
       "jay-reactive": ["../reactive/lib"],
+      "jay-fullstack-component": ["../full-stack-component/lib"],
     },
   },
 }
