--- a/examples/jay/todo-rollup-build/package.json
+++ b/examples/jay/todo-rollup-build/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "description": "",
+  "private": true,
   "scripts": {
     "definitions": "jay-cli definitions ./lib",
     "build:js": "rollup -c rollup.config.js --no-watch.clearScreen",
