set exploration and dev-environment to be private packages

--- a/exploration/deserialization-benchmark/package.json
+++ b/exploration/deserialization-benchmark/package.json
@@ -1,6 +1,7 @@
 {
   "name": "deserialization-benchmark",
   "version": "1.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
     "rollup": "rollup --config ./rollup.config.js",
