--- a/exploration/rfc6902/package.json
+++ b/exploration/rfc6902/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jay-exploration-rfc-6902",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "build": ":",
     "clean": ":",
