--- a/exploration/type-assertions/package.json
+++ b/exploration/type-assertions/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jay-type-assertion-exploration",
   "version": "1.0.0",
+  "private": true,
   "dependencies": {
     "ts-essentials": "^9.4.1"
   },
