--- a/packages/_deprecated/mutable/package.json
+++ b/packages/_deprecated/mutable/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jay-mutable",
-  "version": "1.0.0",
+  "version": "0.5.0",
+  "private": true,
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
